@@ -1,5 +1,9 @@
 2010-04-25  James Youngman  <jay@gnu.org>
 
+	Use valgrind for y2k tests.
+	* tests/year-2000/ext.sh: Use valgrind.
+	* tests/year-2000/prs-y2k.sh: Likewise.
+
 	Use valgrind for what tests.
 	* tests/what/whatbasic.sh: Use valgrind.
 
